--- a/aes-app/Dockerfile
+++ b/aes-app/Dockerfile
@@ -1,22 +1,16 @@
 FROM python:3.12.5
 
-# Install Java (OpenJDK 21)
-RUN apt-get update && \
-    apt-get install -y wget gnupg && \
-    wget -qO - https://packages.adoptium.net/artifactory/api/gpg/key/public | apt-key add - && \
-    echo "deb https://packages.adoptium.net/artifactory/deb bookworm main" > /etc/apt/sources.list.d/adoptium.list && \
-    apt-get update && \
-    apt-get install -y temurin-21-jdk
-
-# Set Java environment variables
-ENV JAVA_HOME=/usr/lib/jvm/temurin-21-jdk-amd64
-ENV PATH="$JAVA_HOME/bin:$PATH"
+# Install Java if using language_tool_python
+RUN apt-get update && apt-get install -y openjdk-17-jre
 
 WORKDIR /app
-
-COPY . .
+COPY . /app
 
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
+ENV JAVA_HOME /usr/lib/jvm/java-17-openjdk-amd64/
+ENV PATH $JAVA_HOME/bin:$PATH
+
+# Start with gunicorn (or use python app.py for debug)
 CMD ["gunicorn", "app:app"]
